Expose principal metadata in keycard API
