# docs/swagger.json
@@ -3523,6 +3523,12 @@
                 "name": {
                     "type": "string"
                 },
+                "principal": {
+                    "type": "string"
+                },
+                "principal_kind": {
+                    "type": "string"
+                },
                 "scope": {
                     "type": "string"
                 }
